jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: host.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
